K8s/admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminservice
  namespace: streaming-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: adminservice
  template:
    metadata:
      labels:
        component: adminservice
    spec:
      containers:
        - name: adminservice
          image: 975050024946.dkr.ecr.us-east-1.amazonaws.com/backend-jsree:admin
          imagePullPolicy: Always

          ports:
            - containerPort: 3003

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
