K8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: streaming-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: authservice
  template:
    metadata:
      labels:
        component: authservice
    spec:
      containers:
        - name: authservice
          image: 975050024946.dkr.ecr.us-east-1.amazonaws.com/backend2-jsree:auth
          imagePullPolicy: Always
          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
