K8s/streaming-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamingservice
  namespace: streaming-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: streamingservice
  template:
    metadata:
      labels:
        component: streamingservice
    spec:
      containers:
        - name: streamingservice
          image: 975050024946.dkr.ecr.us-east-1.amazonaws.com/backend4-jsree:streaming
          imagePullPolicy: Always
          ports:
            - containerPort: 3002

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
