K8s/admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adminservice
  namespace: streaming-app
spec:
  type: ClusterIP
  selector:
    component: adminservice
  ports:
    - protocol: TCP
      port: 3003         # cluster port
      targetPort: 3003 # container port React is listening on
