K8s/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: streaming-app
spec:
  type: ClusterIP
  selector:
    component: authservice
  ports:
    - protocol: TCP
      port: 3001         # cluster port
      targetPort: 3001 # container port React is listening on
