K8s/chat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatservice
  namespace: streaming-app
spec:
  type: ClusterIP
  selector:
    component: chatservice
  ports:
    - protocol: TCP
      port: 3004         # cluster port
      targetPort: 3004 # container port React is listening on
