K8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: streaming-app
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - protocol: TCP
      port: 80          # cluster port
      targetPort: 80  # container port React is listening on
