K8s/streaming-service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamingservice
  namespace: streaming-app
spec:
  type: ClusterIP
  selector:
    component: streamingservice
  ports:
    - protocol: TCP
      port: 3002        # cluster port
      targetPort: 3002
