K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-app-ingress
  namespace: streaming-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: adminservice
                port:
                  number: 3003

          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chatservice
                port:
                  number: 3004

          - path: /api/streaming
            pathType: Prefix
            backend:
              service:
                name: streamingservice
                port:
                  number: 3002

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 3001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
